--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,14 +1,10 @@
-.para,
-.small-para {
+.para {
   color: hsl(0, 100%, 50%);
+  font-size: 22px;
 }
 
 .small-para {
   font-size: 14px;
-}
-
-.para {
-  font-size: 22px;
 }
 
 .confirm {
@@ -17,13 +13,7 @@
   font-weight: bold;
 } 
 
-.button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-}
-
-.child {
+div.text.child {
   color: red;
   font-size: 14px;
 }
